--- a/Template.ipynb
+++ b/Template.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# docker my sql db\n",
+    "docker run --name mysqlDb -e MYSQL_ROOT_PASSWORD=alfabeta -e MYSQL_DATABASE=mysql -e MYSQL_USER=user -e MYSQL_PASSWORD=alfabeta -d mysql:latest -p 3306:3306   \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -31,7 +39,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['gcognos', 'ESW', 'esdm_new', 'esdm_old', 'cp4dProjectsApi', 'infocenter', 'dsw_appid', 'slackApi'])"
+       "dict_keys(['gcognos', 'ESW', 'esdm_new', 'mysql', 'cp4dProjectsApi', 'infocenter', 'dsw_appid', 'slackApi'])"
       ]
      },
      "execution_count": 3,
@@ -55,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +88,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/sergioestrada/Library/CloudStorage/Box-Box/MY_DOCS/GITHUB/sergioeval/DatabaseConnectivity/Code/MasterConnector.py:105: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "/Users/sergioestrada/Library/CloudStorage/Box-Box/MY_DOCS/GITHUB/sergioeval/DatabaseConnectivity/Code/MasterConnector.py:114: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql(sql, self.conn)\n"
      ]
     },
@@ -88,7 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SQL Run Time:  0:00:00.472419\n",
+      "SQL Run Time:  0:00:00.351138\n",
       "Connection closed\n"
      ]
     }
@@ -99,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +319,7 @@
        "[5 rows x 70 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +360,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/sergioestrada/Library/CloudStorage/Box-Box/MY_DOCS/GITHUB/sergioeval/DatabaseConnectivity/Code/MasterConnector.py:105: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "/Users/sergioestrada/Library/CloudStorage/Box-Box/MY_DOCS/GITHUB/sergioeval/DatabaseConnectivity/Code/MasterConnector.py:114: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql(sql, self.conn)\n"
      ]
     },
@@ -360,7 +368,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SQL Run Time:  0:00:00.868001\n",
+      "SQL Run Time:  0:00:00.524026\n",
       "Connection closed\n"
      ]
     }
@@ -371,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -422,41 +430,41 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>N/A</td>\n",
-       "      <td>mnagyova@sk.ibm.com</td>\n",
-       "      <td>2101258055256-6</td>\n",
-       "      <td>GTSGB2101258055256-6</td>\n",
-       "      <td>mnagyova@sk.ibm.com</td>\n",
+       "      <td>zuzana.florekova@sk.ibm.com</td>\n",
+       "      <td>1810043143409-1</td>\n",
+       "      <td>GTSES1810043143409-1</td>\n",
+       "      <td>filipa.monteiro.ramos@ibm.com</td>\n",
        "      <td>N</td>\n",
-       "      <td>BOOTS UK LTD IT FINANCE</td>\n",
-       "      <td>GB</td>\n",
-       "      <td>4.00</td>\n",
+       "      <td>CEMEX ESPA#A, S.A TOMÁS ZOPEQUE</td>\n",
+       "      <td>ES</td>\n",
+       "      <td>7.73</td>\n",
        "      <td>None</td>\n",
        "      <td>...</td>\n",
-       "      <td>-14957.83</td>\n",
        "      <td>None</td>\n",
-       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>No Squad</td>\n",
        "      <td>None</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>N/A</td>\n",
-       "      <td>N/A</td>\n",
-       "      <td>2101258055309-1</td>\n",
-       "      <td>ANADE2101258055309-1</td>\n",
-       "      <td>matej.karel@ibm.com</td>\n",
-       "      <td>N</td>\n",
-       "      <td>0063035433-Schaeffler Technologies</td>\n",
-       "      <td>DE</td>\n",
-       "      <td>0.86</td>\n",
+       "      <td>Supporto BPM</td>\n",
+       "      <td>giacinto_lopiccolo@it.ibm.com</td>\n",
+       "      <td>1810043143538-1</td>\n",
+       "      <td>CLDIT1810043143538-1</td>\n",
+       "      <td>XXXXXXXXX</td>\n",
+       "      <td>na</td>\n",
+       "      <td>GROUPAMA ASSICURAZIONI SPA</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>2.00</td>\n",
        "      <td>None</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -469,22 +477,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>N/A</td>\n",
-       "      <td>ecortesa@cr.ibm.com</td>\n",
-       "      <td>2101258055433-1</td>\n",
-       "      <td>GTSCL2101258055433-1</td>\n",
-       "      <td>gressoni@br.ibm.com</td>\n",
-       "      <td>N</td>\n",
-       "      <td>CLARO CHILE S.A.</td>\n",
-       "      <td>CL</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>None</td>\n",
-       "      <td>...</td>\n",
+       "      <td>BP INGRAM [ContractEnd 6 Equipos USD 34020][Me...</td>\n",
+       "      <td>eaorduzg@co.ibm.com</td>\n",
+       "      <td>1810043143573-3</td>\n",
+       "      <td>GTSCO1810043143573-3</td>\n",
+       "      <td>thiago.de.andrade@ibm.com</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>CLINICA MEDELLIN S A</td>\n",
+       "      <td>CO</td>\n",
        "      <td>0.00</td>\n",
        "      <td>None</td>\n",
-       "      <td>CHAACRJ</td>\n",
+       "      <td>...</td>\n",
        "      <td>None</td>\n",
-       "      <td>No Squad</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Q2C Americas</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -494,17 +502,17 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>N/A</td>\n",
-       "      <td>bruna.magno@ibm.com</td>\n",
-       "      <td>2101258055469-1</td>\n",
-       "      <td>COMUS2101258055469-1</td>\n",
-       "      <td>bruna.magno@ibm.com</td>\n",
+       "      <td>rui.carvalho@ie.ibm.com</td>\n",
+       "      <td>1810043143580-1</td>\n",
+       "      <td>GTSPT1810043143580-1</td>\n",
+       "      <td>tiago.almeida@ibm.com</td>\n",
        "      <td>N</td>\n",
-       "      <td>Massive stop</td>\n",
-       "      <td>U4</td>\n",
-       "      <td>0.01</td>\n",
+       "      <td>SIBS-FORWARD PAYMENT SOLUTIONS</td>\n",
+       "      <td>PT</td>\n",
+       "      <td>9.86</td>\n",
        "      <td>None</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -517,22 +525,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>N/A</td>\n",
-       "      <td>ahollanda@ibm.com</td>\n",
-       "      <td>2101258055515-1</td>\n",
-       "      <td>SHWMX2101258055515-1</td>\n",
-       "      <td>ahollanda@ibm.com</td>\n",
-       "      <td>N</td>\n",
-       "      <td>LENOVO PC HK LIMITED</td>\n",
-       "      <td>MX</td>\n",
-       "      <td>0.30</td>\n",
+       "      <td>SOC reporting improvement</td>\n",
+       "      <td>jf.mairlot@be.ibm.com</td>\n",
+       "      <td>1810043143617-1</td>\n",
+       "      <td>SECLU1810043143617-1</td>\n",
+       "      <td>guillaume.tkint@ie.ibm.com</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>RBC INVESTOR SERVICES</td>\n",
+       "      <td>LU</td>\n",
+       "      <td>22.87</td>\n",
        "      <td>None</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>Q2C Americas</td>\n",
+       "      <td>None</td>\n",
+       "      <td>No Squad</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -545,43 +553,50 @@
        "</div>"
       ],
       "text/plain": [
-       "  OPPNAME             OPPOWNER               SR                 RQNBR  \\\n",
-       "0     N/A  mnagyova@sk.ibm.com  2101258055256-6  GTSGB2101258055256-6   \n",
-       "1     N/A                  N/A  2101258055309-1  ANADE2101258055309-1   \n",
-       "2     N/A  ecortesa@cr.ibm.com  2101258055433-1  GTSCL2101258055433-1   \n",
-       "3     N/A  bruna.magno@ibm.com  2101258055469-1  COMUS2101258055469-1   \n",
-       "4     N/A    ahollanda@ibm.com  2101258055515-1  SHWMX2101258055515-1   \n",
+       "                                             OPPNAME  \\\n",
+       "0                                                N/A   \n",
+       "1                                       Supporto BPM   \n",
+       "2  BP INGRAM [ContractEnd 6 Equipos USD 34020][Me...   \n",
+       "3                                                N/A   \n",
+       "4                          SOC reporting improvement   \n",
        "\n",
-       "   REQUESTOWNER_MASKED VALID                            CUSTNAME CCODE  \\\n",
-       "0  mnagyova@sk.ibm.com     N             BOOTS UK LTD IT FINANCE    GB   \n",
-       "1  matej.karel@ibm.com     N  0063035433-Schaeffler Technologies    DE   \n",
-       "2  gressoni@br.ibm.com     N                    CLARO CHILE S.A.    CL   \n",
-       "3  bruna.magno@ibm.com     N                        Massive stop    U4   \n",
-       "4    ahollanda@ibm.com     N                LENOVO PC HK LIMITED    MX   \n",
+       "                        OPPOWNER               SR                 RQNBR  \\\n",
+       "0    zuzana.florekova@sk.ibm.com  1810043143409-1  GTSES1810043143409-1   \n",
+       "1  giacinto_lopiccolo@it.ibm.com  1810043143538-1  CLDIT1810043143538-1   \n",
+       "2            eaorduzg@co.ibm.com  1810043143573-3  GTSCO1810043143573-3   \n",
+       "3        rui.carvalho@ie.ibm.com  1810043143580-1  GTSPT1810043143580-1   \n",
+       "4          jf.mairlot@be.ibm.com  1810043143617-1  SECLU1810043143617-1   \n",
+       "\n",
+       "             REQUESTOWNER_MASKED VALID                         CUSTNAME CCODE  \\\n",
+       "0  filipa.monteiro.ramos@ibm.com     N  CEMEX ESPA#A, S.A TOMÁS ZOPEQUE    ES   \n",
+       "1                      XXXXXXXXX    na       GROUPAMA ASSICURAZIONI SPA    IT   \n",
+       "2      thiago.de.andrade@ibm.com     Y             CLINICA MEDELLIN S A    CO   \n",
+       "3          tiago.almeida@ibm.com     N   SIBS-FORWARD PAYMENT SOLUTIONS    PT   \n",
+       "4     guillaume.tkint@ie.ibm.com     Y            RBC INVESTOR SERVICES    LU   \n",
        "\n",
        "   CT_DAYS DAYS_OVERDUE  ... BILLING_AMOUNT BILLING_TYPE  \\\n",
-       "0     4.00         None  ...      -14957.83         None   \n",
-       "1     0.86         None  ...            NaN         None   \n",
-       "2     0.33         None  ...           0.00         None   \n",
-       "3     0.01         None  ...            NaN         None   \n",
-       "4     0.30         None  ...            NaN         None   \n",
+       "0     7.73         None  ...           None         None   \n",
+       "1     2.00         None  ...           None         None   \n",
+       "2     0.00         None  ...           None         None   \n",
+       "3     9.86         None  ...           None         None   \n",
+       "4    22.87         None  ...           None         None   \n",
        "\n",
        "  CFTS_OR_IERP_CONTRACT_NUMBER CFTS_WORK_NUMBERS_OR_IERP_WBS_NUMBERS  \\\n",
-       "0                                                               None   \n",
+       "0                         None                                  None   \n",
        "1                         None                                  None   \n",
-       "2                      CHAACRJ                                  None   \n",
+       "2                         None                                  None   \n",
        "3                         None                                  None   \n",
        "4                         None                                  None   \n",
        "\n",
        "        SQUAD_ORG STANDARD_PAYMENT_TERMS CUSTOM_INVOICE_NUMBER  \\\n",
-       "0        No Squad                   None                         \n",
+       "0        No Squad                   None                  None   \n",
        "1  Q2C Europe/Mea                   None                  None   \n",
-       "2        No Squad                   None                  None   \n",
+       "2    Q2C Americas                   None                  None   \n",
        "3        No Squad                   None                  None   \n",
-       "4    Q2C Americas                   None                  None   \n",
+       "4        No Squad                   None                  None   \n",
        "\n",
        "  SYSTEM_INVOICE_NUMBERS BILLING_DATE BILLING_FREQUENCY  \n",
-       "0                                None              None  \n",
+       "0                   None         None              None  \n",
        "1                   None         None              None  \n",
        "2                   None         None              None  \n",
        "3                   None         None              None  \n",
@@ -590,7 +605,7 @@
        "[5 rows x 188 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,18 +622,69 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## To create the mysql database\n",
+    "### docker-compose down\n",
+    "### docker-compose up -d \n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#!pip install mysql-connector-python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'uid': 'user',\n",
+       " 'pwd': 'password',\n",
+       " 'host': '127.0.0.1',\n",
+       " 'port': '3306',\n",
+       " 'db': 'mysql',\n",
+       " 'd_source': 'mysql',\n",
+       " 'ssl': 'False',\n",
+       " 'using_cert_file': 'False',\n",
+       " 'using_jks_file': 'False',\n",
+       " 'jks_password': ''}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "secrets['mysql']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mysql_db = MasterConnector(dbDictionary=secrets['mysql'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mysql_db._connectDb()"
+   ]
   },
   {
    "cell_type": "code",
