--- a/Template.ipynb
+++ b/Template.ipynb
@@ -48,6 +48,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Example bigsql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DbConnector = MasterConnector(dbDictionary=secrets['BIGSQL_APIKEY'], \n",
+    "                                jarFilesPath=DB_JAR_FILES_PATH, \n",
+    "                                jksPath=JKS_FILE_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DbConnector._connectDb()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Example using jks file "
    ]
   },
