--- a/Template.ipynb
+++ b/Template.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DbConnector = MasterConnector(dbDictionary=secrets['BIGSQL_APIKEY'], \n",
+    "DbConnector = MasterConnector(dbDictionary=secrets['BMSIW'], \n",
     "                                jarFilesPath=DB_JAR_FILES_PATH, \n",
     "                                jksPath=JKS_FILE_PATH)"
    ]
@@ -72,11 +72,104 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = DbConnector.sql_to_df(sql='''\n",
+    "SELECT\n",
+    "    CUSTOMERNUMBER,\n",
+    "    INVOICENUMBER,\n",
+    "    INVOICEDATE,\n",
+    "    CONTRACTNUMBER,\n",
+    "    WORKNUMBER,\n",
+    "    PONESSA.BIT2STRING(LASTNAME) AS LASTNAME,\n",
+    "    BILLFROMDATE AS THRU,\n",
+    "    BILLTHRUDATE AS WEEKENDING,\n",
+    "    ROUND(OLDINDEXRATE, 2) AS RATE,\n",
+    "    ROUND(QUANTITY, 2) AS \"HOURS\",\n",
+    "    BILLAMOUNT,\n",
+    "    TAXAMOUNT,\n",
+    "    TRAVELIND AS \"TYPE\",\n",
+    "    PONESSA.BIT2STRING(INVOICETEXT) AS INVOICETEXT\n",
+    "FROM BMSIW.T510INC_UV\n",
+    "WHERE\n",
+    "    COUNTRY='897'\n",
+    "    AND COMPANYCODE='IBM'\n",
+    "    AND INVOICEDATE >= '2020-01-01'\n",
+    "    AND CUSTOMERNUMBER IN (\n",
+    "        1008024,\n",
+    "        1008047,\n",
+    "        1015760,\n",
+    "        2580581,\n",
+    "        2677966,\n",
+    "        2810652,\n",
+    "        5952343)\n",
+    "''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = bytes(b % 256 for b in data['INVOICETEXT'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.decode('cp037')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result.decode(encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b=data['INVOICETEXT'][0]\n",
+    "str=\"\"\n",
+    "for i in b:\n",
+    "    str=str+chr(abs(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Example using jks file "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
