--- a/Template.ipynb
+++ b/Template.ipynb
@@ -13,6 +13,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import json\n",
     "from Code.MasterConnector import MasterConnector\n",
@@ -21,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +36,25 @@
     "DB_SECRETS_FILE_PATH = 'DbSecrets/DbCredentials.json'\n",
     "DB_JAR_FILES_PATH = 'JarFiles/'\n",
     "DB_CERTIFICATES_PATH = 'DbCertificates/'\n",
-    "JKS_FILE_PATH = DB_CERTIFICATES_PATH+'ibm-truststore.jks'"
+    "JKS_FILE_PATH = DB_CERTIFICATES_PATH+'ibm-truststore.jks'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['gcognos', 'ESW', 'BIGSQL_APIKEY', 'BMSIW', 'jerome', 'CEDP_ISC', 'EPM_askp', 'esdm_new', 'mysql', 'ManuConn', 'cp4dProjectsApi', 'infocenter', 'dsw_appid', 'slackApi'])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# reading secrets json file \n",
     "f = open(DB_SECRETS_FILE_PATH, 'r')\n",
@@ -53,20 +71,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DbConnector = MasterConnector(dbDictionary=secrets['BMSIW'], \n",
+    "DbConnector = MasterConnector(dbDictionary=secrets['ManuConn'], \n",
     "                                jarFilesPath=DB_JAR_FILES_PATH, \n",
-    "                                jksPath=JKS_FILE_PATH)"
+    "                                jksPath=JKS_FILE_PATH, certPath=DB_CERTIFICATES_PATH+'CERT.cert')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error in connection:  com.ibm.db2.jcc.am.SqlNonTransientConnectionException: DB2 SQL Error: SQLCODE=-1060, SQLSTATE=08004, SQLERRMC=RPMNGX  , DRIVER=4.32.28\n"
+     ]
+    }
+   ],
    "source": [
     "DbConnector._connectDb()"
    ]
@@ -320,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
